First pass at removing OpenShift specific material.
- All content is removed or replaced with manageiq/cfme specifics.
- Unable to change links to assets, particuarly in the header, at this
  time.  These will need to be extracted out into perhaps a separate
  HAML template.

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -14,7 +14,7 @@
 # The ordering of the records in this document determines the ordering of the
 # topic groups and topics on the main page.
 ---
-Name: OpenShift Documentation
+Name: ManageIQ Documentation
 Dir: welcome
 Topics:
   - Name: Welcome
@@ -28,78 +28,3 @@ Dir: getting_started
 Topics:
   - Name: Overview
     File: overview
-  - Name: Interacting with OpenShift
-    File: interfaces
-  - Name: Preliminary Steps
-    File: preliminary_steps
-  - Name: Creating an Application
-    File: create_app
-  - Name: Deploying an Application
-    File: deploy_app
-
----
-Name: Installing Client Tools
-Dir: client_tools_install_guide
-Topics:
-  - Name: Overview
-    File: overview
-  - Name: On Fedora
-    File: installing_client_tools_on_fedora
-  - Name: On OS X
-    File: installing_client_tools_on_macosx
-  - Name: On openSUSE
-    File: installing_client_tools_on_opensuse
-  - Name: On RHEL / CentOS
-    File: installing_client_tools_on_rhel
-  - Name: On Debian / Ubuntu
-    File: installing_client_tools_on_ubuntu_debian
-  - Name: On Windows
-    File: installing_client_tools_on_windows
-  - Name: Configuring Client Tools
-    File: configuring_client_tools
-  - Name: Updating Client Tools
-    File: updating_client_tools
-
----
-Name: User Guide
-Dir: user_guide
-Topics:
-  - Name: Overview
-    File: overview
-  - Name: Authorization Tokens
-    File: auth_tokens
-  - Name: SSH Keys
-    File: ssh_keys
-  - Name: Domains
-    File: domains
-  - Name: Applications
-    File: apps
-
----
-Name: Developing Cartridges
-Dir: cartridge_specification_guide
-Topics:
-  - Name: Overview
-    File: overview
-  - Name: Managed Files
-    File: managed_files
-  - Name: Locking Cartridges
-    File: locking_cartridges
-  - Name: Exposing Services
-    File: exposing_services
-  - Name: Creating Template Directories for Language Cartridges
-    File: creating_template_directories_for_language_cartridges
-  - Name: Cartridge Scripts
-    File: cartridge_scripts
-  - Name: Environment Variables
-    File: environment_variables
-  - Name: Cartridge Events
-    File: cartridge_events
-  - Name: OpenShift Build Process
-    File: openshift_build_process
-  - Name: Backing Up and Restoring Cartridges
-    File: backing_up_and_restoring_cartridges
-  - Name: Upgrading Custom and Community Cartridges
-    File: upgrading_custom_and_community_cartridges
-  - Name: OpenShift Cartridge Reference
-    File: openshift_cartridge_reference
