--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -1,22 +1,16 @@
 ---
-openshift-origin:
-  name: OpenShift Origin
+manageiq:
+  name: ManageIQ
   branches:
     master:
       name: Nightly Build
-      dir: latest
-    origin-4:
-      name: Version 4
-      dir: stable
-openshift-online:
-  name: OpenShift Online
+      dir: nightly
+    anand:
+      name: Anand Release
+      dir: anand
+cfme:
+  name: CloudForms Management Engine
   branches:
-    online:
-      name: Latest Release
-      dir: online
-openshift-enterprise:
-  name: OpenShift Enterprise
-  branches:
-    enterprise-2.2:
-      name: Version 2.2
-      dir: enterprise/v2.2
+    5.3.z:
+      name: 5.3.z
+      dir: cfme/5.3.z
