Updated publican.cfg Added the sort_order tag

--- a/satellite_guide/publican.cfg
+++ b/satellite_guide/publican.cfg
@@ -6,4 +6,5 @@ type: Article
 mainfile: Bare_Metal_Provisioning_Guide
 dtdver: "4.5"
 brand: "RedHat-201405"
-
+git_branch: docs-rhel-6
+sort_order: 50
