[auth] Active Directory External Authentication
- Added new Authentication folder auth in guide
- Adding new external authentication configuration guide for active directory

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -30,6 +30,13 @@ Topics:
     File: overview
 
 ---
+Name: Authentication
+Dir: auth
+Topics:
+  - Name: Configuring External Authentication with Active Directory
+    File: active_directory
+
+---
 Name: REST API Overview
 Dir: api
 Topics:
