[auth] Ldap External Authentication
- Adding new external authentication configuration guide for LDAP

https://trello.com/c/SIOuHAMk/87-auth-3-support-ldap-authentication-via-sssd

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -35,6 +35,8 @@ Dir: auth
 Topics:
   - Name: Configuring External Authentication with Active Directory
     File: active_directory
+  - Name: Configuring External Authentication with LDAP
+    File: ldap
 
 ---
 Name: REST API Overview
