[auth] Enable 2-Factor Authentication with External Auth
Documenting:
- Requirements for 2-FA
- How to configure External Auth for 2-FA
- How to use 2-FA on the Appliance.

https://trello.com/c/fuafz1JP/86-auth-3-support-2fa-with-ipa

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -37,6 +37,8 @@ Topics:
     File: active_directory
   - Name: Configuring External Authentication with LDAP
     File: ldap
+  - Name: External Authentication using 2-Factor-Authentication with IPA
+    File: ipa_2fa
 
 ---
 Name: REST API Overview
