BZ#1262169-Updated publican.cfg

--- a/doc-Scripting_Actions_in_CloudForms/publican.cfg
+++ b/doc-Scripting_Actions_in_CloudForms/publican.cfg
@@ -1,8 +1,11 @@
-# Config::Simple 4.59
-# Tue Sep 15 10:52:52 2015
-
-xml_lang: "en-US"
-dtdver: "4.5"
-brand: common
+xml_lang: en-US
 type: Book
+brand: RedHat-201405
+chunk_first: 0
+git_branch: docs-rhel-6
+sort_order: 35
+docname: Scripting Actions in CloudForms
+product: Red Hat CloudForms
+mainfile: Scripting_Actions_in_CloudForms
+version: 4.0
 
