--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-Gemfile.lock
-*.html
-*.swp
-_package
+## AsciiBinder-specific ignores
 _preview
+_package
+*.swp
+diag-*.png
+diag-*.png.cache
+
+## Project-specific ignores
+
