More cleanup due to upgrade to AsciiBinder

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -1,13 +1,21 @@
 ---
 manageiq:
   name: ManageIQ
+  author: ManageIQ Documentation Project <contact@manageiq.org>
+  site: community
+  site_name: ManageIQ Documentation
+  site_url: http://manageiq.org
   branches:
     master:
       name: Nightly Build
-      dir: nightly
+      dir: master
 cfme:
   name: CloudForms Management Engine
+  author: CloudForms Management Engine Documentation Project <contact@manageiq.org>
+  site: commercial
+  site_name: CloudForms Management Engine Documentation
+  site_url: https://www.redhat.com/en/technologies/cloud-computing/cloudforms
   branches:
-    5.3.z:
-      name: 5.3.z
-      dir: cfme/5.3.z
+    5.4.z:
+      name: 5.4.z
+      dir: cfme/5.4.z
