--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,6 +9,9 @@ manageiq:
     master:
       name: Nightly Build
       dir: master
+    capablanca:
+      name: Capablanca
+      dir: capablanca
 cfme:
   name: CloudForms Management Engine
   author: CloudForms Management Engine Documentation Project <contact@manageiq.org>
