[api docs] v2.1.0 Documentation
- Updated Version History, Included high level description of what changed in v2.1.0
- Updated Primary Collections reference to include the new collections
- Enhanced Authentication page to discuss about --request_type=ui
- Added page for REST API Authorization, Discuss the need for and usage of X-MIQ-Group
- Added Tenants reference and mentioned tenants support in tagging
- Support for Reports: Report and Report result querying, Running Reports, Importing Reports
- Adding CRUD for Categories and Tags
- Adding Roles Management: Querying roles and features, CRUD on roles, Assigning and Unassigning features to roles
- User password updates: Ability to update users's password
- Setting Ownerships: "set_ownership" action, examples of owner and group specification
- Chargebacks and Rates: Queries, CRUD Reference and Examples for Rates
- Service enhancements: Additional queries, Custom button and button group support with related actions
- Service enhancements: Triggering custom actions, added custom action example
- Updated Provider types, added mapping tables for v2.0.0 types to v2.1.0 types.
- Listing required/optional attributes when creating resources in appendix
- Updated authentication attribute for OpenShift ContainerManager provider
- Moving Examples to seperate Topic for easier browsing of examples by category

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -40,6 +40,10 @@ Topics:
     Topics:
       - Name: Authentication
         File: auth
+      - Name: Authorization
+        File: authorization
+      - Name: Password Updates
+        File: password
       - Name: CRUD
         File: crud
       - Name: HTTP Basics
@@ -57,32 +61,71 @@ Topics:
     Topics:
       - Name: Primary Collections
         File: collections
+      - Name: Automation Requests
+        File: automation_requests
+      - Name: "Categories & Tags"
+        File: categories_tags
+      - Name: "Chargebacks & Rates"
+        File: chargebacks_rates
+      - Name: "Policies & Policy Profiles"
+        File: policies
+      - Name: Policy Collections
+        File: policy_collections
       - Name: Provider Support
         File: providers
       - Name: Provision Requests
         File: provision_requests
       - Name: Service Management
         File: services
-      - Name: VM Management
-        File: vms
+      - Name: Service Queries
+        File: service_queries
+      - Name: Service Custom Actions
+        File: service_custom_actions
+      - Name: Reports Support
+        File: reports
+      - Name: Role Management
+        File: roles
+      - Name: Setting Ownership
+        File: ownership
       - Name: "Tags & Tagging"
         File: tagging
-      - Name: "Policies & Policy Profiles"
-        File: policies
-      - Name: Policy Collections
-        File: policy_collections
+      - Name: Tenant Management
+        File: tenants
+      - Name: VM Management
+        File: vms
       - Name: VM Custom Attributes
         File: custom_attributes
-      - Name: Automation Requests
-        File: automation_requests
-  - Name: Examples
+  - Name: Appendices
+    Dir: appendices
+    Topics:
+      - Name: Quick Reference
+        File: quick_reference
+      - Name: Resource Attributes
+        File: resource_attributes
+      - Name: Provider Types
+        File: provider_types
+      - Name: Provision Request Supported Attributes
+        File: provision_attributes
+      - Name: Advanced Provisioning Attributes
+        File: advanced_provisioning
+      - Name: SOAP to REST Mapping
+        File: soap_to_rest
+
+---
+Name: REST API Examples
+Dir: api
+Topics:
+  - Name: Foundation
     Dir: examples
     Topics:
-      - Name: Foundation - Querying Examples
+      - Name: Querying Examples
         File: queries
       - Name: Paging Queries
         File: paging_queries
-      - Name: Providers - Create a Provider
+  - Name: Providers
+    Dir: examples
+    Topics:
+      - Name: Create a Provider
         File: create_provider
       - Name: Create a Provider with multiple credentials
         File: create_provider_compound_credentials
@@ -92,11 +135,17 @@ Topics:
         File: refresh_provider
       - Name: Delete Provider
         File: delete_provider
-      - Name: Provisioning Requests - Create a Provision Request
+  - Name: Provisioning Requests
+    Dir: examples
+    Topics:
+      - Name: Create a Provision Request
         File: provision_request
       - Name: Create multliple Provision Requests
         File: provision_requests
-      - Name: Service Catalogs - Add a Service Catalog
+  - Name: Service Catalogs
+    Dir: examples
+    Topics:
+      - Name: Add a Service Catalog
         File: add_service_catalog
       - Name: Add multiple Service Catalogs
         File: add_service_catalogs
@@ -110,13 +159,19 @@ Topics:
         File: unassign_service_templates
       - Name: Delete Service Catalogs
         File: delete_service_catalogs
-      - Name: Service Templates - Edit a Service Template
+  - Name: Service Templates
+    Dir: examples
+    Topics:
+      - Name: Edit a Service Template
         File: edit_service_template
       - Name: Edit Service Templates
         File: edit_service_templates
       - Name: Delete Service Templates
         File: delete_service_templates
-      - Name: Services - Order a Service
+  - Name: Services
+    Dir: examples
+    Topics:
+      - Name: Order a Service
         File: order_service
       - Name: Order multiple Services
         File: order_services
@@ -132,9 +187,14 @@ Topics:
         File: retire_service
       - Name: Retire multiple Services
         File: retire_services
+      - Name: Trigger a Custom Action on a Service
+        File: custom_action_service
       - Name: Delete Services
         File: delete_services
-      - Name: VM Management - Start a VM
+  - Name: VM Management
+    Dir: examples
+    Topics:
+      - Name: Start a VM
         File: start_vm
       - Name: Stop a VM
         File: stop_vm
@@ -150,7 +210,10 @@ Topics:
         File: add_lifecycle_event_vm
       - Name: Delete a VM
         File: delete_vm
-      - Name: Tag Management - Assign Tags
+  - Name: Tag Management
+    Dir: examples
+    Topics:
+      - Name: Assign Tags
         File: assign_tags
       - Name: Assign Tags to Service Template
         File: assign_tags_to_service_template
@@ -158,18 +221,10 @@ Topics:
         File: unassign_tags
       - Name: Unassign Tags from a Service Template
         File: unassign_tags_from_service_template
-      - Name: Automation Requests - Create an Automation Request
+  - Name: Automation Requests
+    Dir: examples
+    Topics:
+      - Name: Create an Automation Request
         File: automation_request
       - Name: Create multiple Automation Requests
         File: automation_requests
-  - Name: Appendices
-    Dir: appendices
-    Topics:
-      - Name: Quick Reference
-        File: quick_reference
-      - Name: SOAP to REST Mapping
-        File: soap_to_rest
-      - Name: Provision Request Supported Attributes
-        File: provision_attributes
-      - Name: Advanced Provisioning Attributes
-        File: advanced_provisioning
