[auth] Adding SAML Configuration documentation
- Added auth/saml.adoc

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -30,6 +30,8 @@ Topics:
     File: ldap
   - Name: External Authentication using 2-Factor-Authentication with IPA
     File: ipa_2fa
+  - Name: Configuring External Authentication with SAML
+    File: saml
 
 ---
 Name: Installation
@@ -39,9 +41,9 @@ Topics:
     Dir: installing_on_rhev
     Topics: 
       - Name: Installing the Appliance
-      - File: Installing_Appliance
+        File: Installing_Appliance
       - Name: Configuring the Appliance
-      - File: Configuring_Appliance
+        File: Configuring_Appliance
 
 ---
 Name: REST API
