editing build file; changing install docs dir

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -32,6 +32,18 @@ Topics:
     File: ipa_2fa
 
 ---
+Name: Installation
+Dir: install
+Topics: 
+  - Name: Installing on RHEV
+    Dir: installing_on_rhev
+    Topics: 
+      - Name: Installing the Appliance
+      - File: Installing_Appliance
+      - Name: Configuring the Appliance
+      - File: Configuring_Appliance
+
+---
 Name: REST API
 Dir: api
 Topics:
