--- a/installing_cloudforms_on_red_hat_enterprise_virtualization/metadata.ini
+++ b/installing_cloudforms_on_red_hat_enterprise_virtualization/metadata.ini
@@ -4,7 +4,7 @@ type = book
 markup = docbook
 
 [metadata]
-title = Installing CloudForms on Red Hat Enterprise Linux OpenStack Platform
+title = Installing CloudForms on Red Hat Enterprise Virtualization
 product = Red Hat CloudForms
 version = 4.1
 edition = 
