[auth] Support IPA/AD Trust
Documenting:
- Requirements for IPA/AD Trust
- How to configure IPA/AD Trust
- How to use IPA/AD Trust

https://trello.com/c/qq4sTk5o/93-auth-3-support-ipa-ad-trust

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -30,6 +30,8 @@ Topics:
     File: ldap
   - Name: External Authentication using 2-Factor-Authentication with IPA
     File: ipa_2fa
+  - Name: External Authentication with IPA/AD Trust
+    File: ipa_ad_trust
   - Name: Configuring External Authentication with SAML
     File: saml
 
