[api] API v2.2.0 Documentation
- Updated Versioning page to talk about v2.2.0 and its features
- Updated Collection page to include the new collections
- Enhanced Filtering capabilities:
 - * wildcard
 - nil or NULL equality/inequality match
 - Virtual attribute include one-level association
- Case insensitive sort option
- Group Management
- User Management
- Host Management - Queries and Password updates.
- Service Reconfiguration
- Additional actions on VMs
- Instance Management
- Approving & Denying Provision and Automation Request
- Supporting DELETE of own authentication token
- Adding support for Tenant Quota CRUD
- Accessing vms subcollection of services
- Adding support for Service Orders (aka Shopping Carts)
- Refresh Dialog fields

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -83,6 +83,12 @@ Topics:
         File: categories_tags
       - Name: "Chargebacks & Rates"
         File: chargebacks_rates
+      - Name: Group Management
+        File: groups
+      - Name: Host Management
+        File: hosts
+      - Name: Instance Management
+        File: instances
       - Name: "Policies & Policy Profiles"
         File: policies
       - Name: Policy Collections
@@ -97,6 +103,8 @@ Topics:
         File: service_queries
       - Name: Service Custom Actions
         File: service_custom_actions
+      - Name: Service Orders (Shopping Carts)
+        File: service_orders
       - Name: Reports Support
         File: reports
       - Name: Role Management
@@ -107,6 +115,8 @@ Topics:
         File: tagging
       - Name: Tenant Management
         File: tenants
+      - Name: User Management
+        File: users
       - Name: VM Management
         File: vms
       - Name: VM Custom Attributes
@@ -199,6 +209,12 @@ Topics:
         File: edit_service_via_put
       - Name: Edit Services
         File: edit_services
+      - Name: Reconfigure Service
+        File: reconfigure_service
+      - Name: Refresh Service Template Dialog Fields
+        File: refresh_dialog_fields
+      - Name: Refresh Service Dialog Fields
+        File: refresh_service_dialog_fields
       - Name: Retire a Service
         File: retire_service
       - Name: Retire multiple Services
