--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+## Global ignores
+
+*/build/*
+*/cfme/build/*
+*/miq/build/*
+*/publish/*
+*/tmp/*
+*.swp
+
 ## AsciiBinder-specific ignores
 _preview
 _package
