Update distro_map for euwe branch

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,9 +9,9 @@ manageiq:
     master:
       name: Nightly Build
       dir: master
-    capablanca:
-      name: Capablanca
-      dir: capablanca
+    euwe:
+      name: Euwe
+      dir: euwe
 cfme:
   name: CloudForms Management Engine
   author: CloudForms Management Engine Documentation Project <contact@manageiq.org>
@@ -19,6 +19,6 @@ cfme:
   site_name: CloudForms Management Engine Documentation
   site_url: https://www.redhat.com/en/technologies/cloud-computing/cloudforms
   branches:
-    5.4.z:
-      name: 5.4.z
-      dir: cfme/5.4.z
+    5.7.z:
+      name: 5.7.z
+      dir: cfme/5.7.z
