Updated the directory for the RHV installation guide in the topic map.

--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -276,8 +276,8 @@ Topics:
     - Name: Index
       File: index
 ---
-Name: Installing ManageIQ on Red Hat Enterprise Virtualization
-Dir: doc-Installing_on_Red_Hat_Enterprise_Virtualization
+Name: Installing ManageIQ on Red Hat Virtualization
+Dir: doc-Installing_on_Red_Hat_Virtualization
 Topics:
   - Name: Table of Contents
     Dir: miq
