Update distro_map for fine branch

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -10,6 +10,9 @@ manageiq:
       name: Nightly Build
       dir: master
     euwe:
+      name: Fine
+      dir: fine
+    euwe:
       name: Euwe
       dir: euwe
 cfme:
@@ -19,6 +22,9 @@ cfme:
   site_name: CloudForms Management Engine Documentation
   site_url: https://www.redhat.com/en/technologies/cloud-computing/cloudforms
   branches:
+    5.8.z:
+      name: 5.8.z
+      dir: cfme/5.8.z
     5.7.z:
       name: 5.7.z
       dir: cfme/5.7.z
