Revert "PAUSED: Use `git resume` to continue working."
This reverts commit 24d4392c018d88053dd5221f760af67ebea2eebe.

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -280,13 +280,13 @@ Topics:
         File: automation_requests
 ---
 Name: Installing ManageIQ on Google Compute Engine
-Dir: doc-Installing_on_Google_Compute_Engine/topics
+Dir: doc-Installing_on_Google_Compute_Engine
 Topics:
-  - Name: Installation
-    File: installation
-  - Name: Configuration
-    File: configuration
-
+  - Name: Table of Contents
+    Dir: miq
+    Topics:
+    - Name: Index
+      File: index
 ---
 Name: Installing ManageIQ on Microsoft Azure
 Dir: doc-Installing_on_Microsoft_Azure
