--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,7 +9,7 @@ manageiq:
     master:
       name: Nightly Build
       dir: master
-    euwe:
+    fine:
       name: Fine
       dir: fine
     euwe:
