--- a/_build_cfg.yml
+++ b/_build_cfg.yml
@@ -56,6 +56,8 @@ Topics:
         File: json
       - Name: Querying
         File: query
+      - Name: Bulk Querying
+        File: bulk_query
       - Name: Filtering
         File: filtering
       - Name: Version History
@@ -65,8 +67,20 @@ Topics:
     Topics:
       - Name: Primary Collections
         File: collections
+      - Name: Arbitration Profiles
+        File: arbitration_profiles
+      - Name: Arbitration Rules
+        File: arbitration_rules
+      - Name: Arbitration Settings
+        File: arbitration_settings
+      - Name: Automate Model
+        File: automate
+      - Name: Automate Domains
+        File: automate_domains
       - Name: Automation Requests
         File: automation_requests
+      - Name: Blueprint Support
+        File: blueprints
       - Name: "Categories & Tags"
         File: categories_tags
       - Name: "Chargebacks & Rates"
@@ -77,26 +91,38 @@ Topics:
         File: hosts
       - Name: Instance Management
         File: instances
+      - Name: Notifications Support
+        File: notifications
+      - Name: Orchestration Support
+        File: orchestration
+      - Name: Picture Management
+        File: pictures
       - Name: "Policies & Policy Profiles"
         File: policies
       - Name: Policy Collections
         File: policy_collections
       - Name: Provider Support
         File: providers
+      - Name: Provider Custom Attributes
+        File: provider_custom_attributes
       - Name: Provision Requests
         File: provision_requests
+      - Name: Request Support
+        File: requests
+      - Name: Reports Support
+        File: reports
+      - Name: Role Management
+        File: roles
       - Name: Service Management
         File: services
       - Name: Service Queries
         File: service_queries
       - Name: Service Custom Actions
         File: service_custom_actions
+      - Name: Service Dialogs
+        File: service_dialogs
       - Name: Service Orders (Shopping Carts)
         File: service_orders
-      - Name: Reports Support
-        File: reports
-      - Name: Role Management
-        File: roles
       - Name: Setting Ownership
         File: ownership
       - Name: "Tags & Tagging"
@@ -114,6 +140,8 @@ Topics:
     Topics:
       - Name: Quick Reference
         File: quick_reference
+      - Name: Collection Metadata
+        File: collection_metadata
       - Name: Resource Attributes
         File: resource_attributes
       - Name: Provider Types
@@ -124,6 +152,8 @@ Topics:
         File: advanced_provisioning
       - Name: SOAP to REST Mapping
         File: soap_to_rest
+      - Name: Deprecated Resource Attributes
+        File: deprecated_resource_attributes
 
 ---
 Name: REST API Examples
