[api] API v2.4.0 Documentation
- Updated Versioning page to talk about v2.4.0 and its features
- Added the newly exposed collections in api/reference/collections.adoc
- Added /api/actions reference
- Added /api/conditions reference
- Added reference for /api/alerts, /api/alerts/:id/alert_actions and /api/alert_definitions
- Added /api/authentications and /api/configuration_script_payloads/:id/authentications reference
- Added /api/configuration_script_sources reference
- Querying load_balancers as subcollection or providers or instances
- Ability to copy Orchestration Templates
- Added CRUD support for /api/policies
- import_vm action on /api/providers/:id
- Ability to copy Service Orders
- Querying orchestration_stacks of services
- Added CRUD on /api/service_dialogs including service dialog copy
- Adding support for bulk assign and unassign of tags for vms and services
- Adding and Removing resources from services
- Removing all resources from services
- Adding and Removing approvers for service_requests
- CRUD on /api/service_templates
- Editing Basic VM Info.
- Added Snapshot support for Vms and Instances
- Updated resource_attributes.adoc to reflect the new collections
- Updated providers attributes

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -67,12 +67,18 @@ Topics:
     Topics:
       - Name: Primary Collections
         File: collections
+      - Name: Actions
+        File: actions
+      - Name: Alert Management
+        File: alerts
       - Name: Arbitration Profiles
         File: arbitration_profiles
       - Name: Arbitration Rules
         File: arbitration_rules
       - Name: Arbitration Settings
         File: arbitration_settings
+      - Name: Authentication Management
+        File: authentications
       - Name: Automate Model
         File: automate
       - Name: Automate Domains
@@ -85,6 +91,10 @@ Topics:
         File: categories_tags
       - Name: "Chargebacks & Rates"
         File: chargebacks_rates
+      - Name: Conditions
+        File: conditions
+      - Name: Configuration Script Source Management
+        File: configuration_script_sources
       - Name: Group Management
         File: groups
       - Name: Host Management
@@ -125,6 +135,8 @@ Topics:
         File: service_orders
       - Name: Setting Ownership
         File: ownership
+      - Name: Snapshot Management
+        File: snapshots
       - Name: "Tags & Tagging"
         File: tagging
       - Name: Tenant Management
