Update distro_map for gaprindashvili

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,6 +9,9 @@ manageiq:
     master:
       name: Nightly Build
       dir: master
+    gaprindashvili:
+      name: Gaprindashvili
+      dir: gaprindashvili
     fine:
       name: Fine
       dir: fine
@@ -22,6 +25,9 @@ cfme:
   site_name: CloudForms Management Engine Documentation
   site_url: https://www.redhat.com/en/technologies/cloud-computing/cloudforms
   branches:
+    5.9.z:
+      name: 5.9.z
+      dir: cfme/5.9.z
     5.8.z:
       name: 5.8.z
       dir: cfme/5.8.z
