api v3.0.0 - Custom Actions on remaining models

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -95,6 +95,8 @@ Topics:
         File: conditions
       - Name: Configuration Script Source Management
         File: configuration_script_sources
+      - Name: Custom Actions
+        File: custom_actions
       - Name: Group Management
         File: groups
       - Name: Host Management
