api v3.0.0 - Delete Cloud Volumes

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -89,6 +89,8 @@ Topics:
         File: categories_tags
       - Name: "Chargebacks & Rates"
         File: chargebacks_rates
+      - Name: Cloud Volumes
+        File: cloud_volumes
       - Name: Conditions
         File: conditions
       - Name: Configuration Script Source Management
