api v3.0.0 - Enabled paging by default

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -60,6 +60,8 @@ Topics:
         File: bulk_query
       - Name: Filtering
         File: filtering
+      - Name: Paging
+        File: paging
       - Name: Version History
         File: versioning
   - Name: Reference
