api v3.0.0 - Query and Delete Network Routers

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -105,6 +105,8 @@ Topics:
         File: hosts
       - Name: Instance Management
         File: instances
+      - Name: Network Routers
+        File: network_routers
       - Name: Notifications Support
         File: notifications
       - Name: Orchestration Support
