--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -105,6 +105,8 @@ Topics:
         File: hosts
       - Name: Instance Management
         File: instances
+      - Name: Metric Rollups
+        File: metric_rollups
       - Name: Network Routers
         File: network_routers
       - Name: Notifications Support
