api v3.0.0 - Management of Physical Servers

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -113,6 +113,8 @@ Topics:
         File: notifications
       - Name: Orchestration Support
         File: orchestration
+      - Name: Physical Servers
+        File: physical_servers
       - Name: Picture Management
         File: pictures
       - Name: "Policies & Policy Profiles"
