api v3.0.0 - Flavor Management

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -99,6 +99,8 @@ Topics:
         File: configuration_script_sources
       - Name: Custom Actions
         File: custom_actions
+      - Name: Flavor Management
+        File: flavors
       - Name: Group Management
         File: groups
       - Name: Host Management
