api v3.0.0 - Generic Object Definitions and Generic Objects

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -95,6 +95,8 @@ Topics:
         File: custom_actions
       - Name: Flavor Management
         File: flavors
+      - Name: Generic Object Management
+        File: generic_objects
       - Name: Group Management
         File: groups
       - Name: Host Management
