api v3.0.0 - Support Security Groups

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -131,6 +131,8 @@ Topics:
         File: reports
       - Name: Role Management
         File: roles
+      - Name: Security Groups
+        File: security_groups
       - Name: Service Management
         File: services
       - Name: Service Queries
