--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -174,6 +174,8 @@ Topics:
         File: advanced_provisioning
       - Name: SOAP to REST Mapping
         File: soap_to_rest
+      - Name: Deprecated Classes
+        File: deprecated_classes
       - Name: Deprecated Resource Attributes
         File: deprecated_resource_attributes
 
