api v3.0.0 - Support Custom Attributes on Services and Instances

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -93,6 +93,8 @@ Topics:
         File: configuration_script_sources
       - Name: Custom Actions
         File: custom_actions
+      - Name: Custom Attributes
+        File: custom_attributes
       - Name: Flavor Management
         File: flavors
       - Name: Generic Object Management
@@ -121,8 +123,6 @@ Topics:
         File: policy_collections
       - Name: Provider Support
         File: providers
-      - Name: Provider Custom Attributes
-        File: provider_custom_attributes
       - Name: Provision Requests
         File: provision_requests
       - Name: Request Support
@@ -155,8 +155,6 @@ Topics:
         File: users
       - Name: VM Management
         File: vms
-      - Name: VM Custom Attributes
-        File: custom_attributes
   - Name: Appendices
     Dir: appendices
     Topics:
