api v3.0.0 - Support Event Streams

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -95,6 +95,8 @@ Topics:
         File: custom_actions
       - Name: Custom Attributes
         File: custom_attributes
+      - Name: Event Streams
+        File: event_streams
       - Name: Flavor Management
         File: flavors
       - Name: Generic Object Management
