api v3.0.0 - Deleting Tasks

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -151,6 +151,8 @@ Topics:
         File: snapshots
       - Name: "Tags & Tagging"
         File: tagging
+      - Name: Tasks
+        File: tasks
       - Name: Tenant Management
         File: tenants
       - Name: User Management
