api v3.0.0 - Support Automate Workspaces

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -81,6 +81,8 @@ Topics:
         File: automate_domains
       - Name: Automation Requests
         File: automation_requests
+      - Name: Automate Workspaces
+        File: automate_workspaces
       - Name: "Categories & Tags"
         File: categories_tags
       - Name: "Chargebacks & Rates"
