api v3.0.0 - Settings Management

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -151,6 +151,8 @@ Topics:
         File: service_orders
       - Name: Setting Ownership
         File: ownership
+      - Name: Settings Management
+        File: settings
       - Name: Snapshot Management
         File: snapshots
       - Name: "Tags & Tagging"
