api v3.0.0 - PR Review Changes.

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -60,8 +60,8 @@ Topics:
         File: bulk_query
       - Name: Filtering
         File: filtering
-      - Name: Paging
-        File: paging
+      - Name: Pagination
+        File: pagination
       - Name: Version History
         File: versioning
   - Name: Reference
@@ -182,8 +182,8 @@ Topics:
         File: advanced_provisioning
       - Name: SOAP to REST Mapping
         File: soap_to_rest
-      - Name: Deprecated Classes
-        File: deprecated_classes
+      - Name: Deprecated Types
+        File: deprecated_types
       - Name: Deprecated Resource Attributes
         File: deprecated_resource_attributes
 
