Add support for OpenID-Connect (OIDC)

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -34,6 +34,8 @@ Topics:
     File: ipa_ad_trust
   - Name: Configuring External Authentication with SAML
     File: saml
+  - Name: Configuring External Authentication with OpenID-Connect
+    File: openid_connect
 
 ---
 Name: REST API
