Removed draft notes, updated metadata

--- a/doc-V2V_Guide/cfme/metadata.ini
+++ b/doc-V2V_Guide/cfme/metadata.ini
@@ -4,17 +4,16 @@ type = book
 markup = docbook
 
 [metadata]
-title = V2V Guide
-product = Red Hat V2V
-version = 
-edition = 
-subtitle = 
-keywords = 
-abstract = 
+title = Infrastructure Migration Solution Guide
+product = Red Hat Infrastructure Migration Solution
+version =
+edition =
+subtitle =
+keywords =
+abstract =
 
 [bugs]
-reporting_url = 
-type = 
-product = 
+reporting_url =
+type =
+product =
 component = Documentation
-
