--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,6 +9,9 @@ manageiq:
     master:
       name: Nightly Build
       dir: master
+    hammer:
+      name: Hammer
+      dir: hammer
     gaprindashvili:
       name: Gaprindashvili
       dir: gaprindashvili
@@ -25,6 +28,9 @@ cfme:
   site_name: CloudForms Management Engine Documentation
   site_url: https://www.redhat.com/en/technologies/cloud-computing/cloudforms
   branches:
+    5.10.z:
+      name: 5.10.z
+      dir: cfme/5.10.z
     5.9.z:
       name: 5.9.z
       dir: cfme/5.9.z
